enclosing method for lambda's